Fix alignment issues

--- a/src/client/stylesheets/components/_app-triage.scss
+++ b/src/client/stylesheets/components/_app-triage.scss
@@ -10,7 +10,6 @@
 .app-triage__start-inner {
   max-width: 960px;
   margin: 0 auto;
-  padding: 0 15px;
 }
 
 .app-triage__start-content {
@@ -103,7 +102,6 @@
 .app-triage__body {
   max-width: 960px;
   margin: 0 auto;
-  padding: 0 15px;
 
   .govuk-main-wrapper {
     padding-left: 0;
