--- a/src/client/stylesheets/components/_defra-service-navigation.scss
+++ b/src/client/stylesheets/components/_defra-service-navigation.scss
@@ -9,7 +9,6 @@
 .defra-service-navigation__inner {
   max-width: 960px;
   margin: 0 auto;
-  padding: 0 15px;
 }
 
 .defra-service-navigation__list {
